Add database connection, first try

--- a/config.cfg
+++ b/config.cfg
@@ -4,3 +4,10 @@ url = http://api.openweathermap.org
 city = Rzeszow
 units = metric
 
+[Database]
+db_name = weather_data
+db_user = postgres
+db_password = postgres
+db_host = 127.0.0.1
+db_port = 5432
+
