--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,8 @@
 [API]
-api_key = df454cc4c5f8ce4a
-url = http://api.wunderground.com/api/
+api_key = 4a0d3cc607e3f12cae449fdb8f1c9d20
+url = http://api.openweathermap.org
 city = Rzeszow
+units = metric
 
 [Database]
 db_name = weather_data
