repair last commit

--- a/config.cfg
+++ b/config.cfg
@@ -1,8 +1,7 @@
 [API]
-api_key = 4a0d3cc607e3f12cae449fdb8f1c9d20
-url = http://api.openweathermap.org
+api_key = df454rfvde328ce4a
+url = http://api.wunderground.com/api/
 city = Rzeszow
-units = metric
 
 [Database]
 db_name = weather_data
